# persistent-cache-decorator

./: .gitignore  .pre-commit-config.yaml  LICENSE.txt  README.md  cookiecutter.json  mkdocs.yml  playground.py  pyproject.toml  taplo.toml
.github/: copilot-instructions.md  dependabot.yaml
.github/workflows/: codeflash-optimize.yaml  docs.yaml  docs.yml  main.yaml  main.yml  publish-to-test-pypi.yml
docs/: index.md
docs/example/: index.md  markdown.md
src/persistent_cache/: __init__.py  __main__.py  cli.py  decorators.py  foo.py
src/persistent_cache/backend/: __init__.py  json.py  pickle.py  sqlite.py
src/persistent_cache/wrappers/: __init__.py
src/persistent_cache_decorator/: __about__.py  __init__.py
src/persistent_cache_decorator/backend/: json.py  pickle.py  sqlite.py
tests/: __init__.py  main_test.py  persistent_cache_test.py  scripts_test.py
