[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "persistent-cache-decorator"
dynamic = ["version"]
description = 'A decorator for caching functions that provides persistence to JSON, pickle, or SQLite'
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["cache", "decorator", "persistence", "JSON", "pickle", "SQLite"]
authors = [
  { name = "Flavio Amurrio", email = "25621374+FlavioAmurrioCS@users.noreply.github.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "typing-extensions",
]

[project.scripts]
dev-cache = "persistent_cache.cli:main"

[project.urls]
Documentation = "https://github.com/FlavioAmurrioCS/persistent-cache-decorator#readme"
Issues = "https://github.com/FlavioAmurrioCS/persistent-cache-decorator/issues"
Source = "https://github.com/FlavioAmurrioCS/persistent-cache-decorator"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/persistent_cache/_version.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "setuptools-scm",
]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "requests",
  "httpx",
  "urllib3<=2.0.0",
  "pytest-asyncio",

]

[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
  "coverage xml",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/persistent_cache tests}"

[tool.coverage.run]
source_pkgs = ["persistent_cache_decorator", "tests"]
branch = true
parallel = true
omit = [

]

[tool.coverage.paths]
persistent_cache_decorator = ["src/persistent_cache", "*/persistent-cache-decorator/src/persistent_cache"]
tests = ["tests", "*/persistent-cache-decorator/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "class CacheBackend\\(Protocol, Generic\\[_R\\]\\):",
]
[tool.hatch.build.targets.wheel]
packages = ["src/persistent_cache"]

# COMMON SETTINGS BELOW
[tool.hatch.envs.hatch-static-analysis]
config-path = "none"

[tool.pyright]
pythonVersion = "3.8"

[tool.mypy]
python_version = "3.8"
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true


[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "ALL",
]
ignore = [
  "ANN101", # missing-type-self
  "ANN102", # missing-type-cls
  "COM812", # missing-trailing-comma
  "D100",   # undocumented-public-module
  "D101",   # undocumented-public-class
  "D102",   # undocumented-public-method
  "D103",   # undocumented-public-function
  "D104",   # undocumented-public-package
  "D105",   # undocumented-magic-method
  "D107",   # undocumented-public-init
  "ERA001", # commented-out-code
  "I",      # isort # DO NOT ENABLE https://github.com/astral-sh/ruff/issues/4670
  "ISC001", # single-line-implicit-string-concatenation
  "PGH003", # blanket-type-ignore
  "PTH",    # flake8-use-pathlib # DO NOT ENABLE, we prefere non pathlib
  "T20",    # flake8-print # DO NOT ENABLE, we use prints
  "D203",   # one-blank-line-before-class
  "D212",   # multi-line-summary-first-line
  "D401",   # non-imperative-mood
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

# https://github.com/astral-sh/ruff/issues/4368
[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",   # assert
  "E501",   # line-too-long
  "INP001", # implicit-namespace-package
]

[tool.codeflash]
module-root = "src/persistent_cache"
tests-root = "tests"
test-framework = "pytest"
ignore-paths = []
disable-telemtry = true
